force-app/main/default/objects/CCP_Pricing_Price_Group__c.object
<CustomObject>
    <fields>
        <fullName>AG__c</fullName>
        <label>AG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C0__c</fullName>
        <label>C0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C1__c</fullName>
        <label>C1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C2__c</fullName>
        <label>C2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connection_Name__c</fullName>
        <label>Connection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Number__c</fullName>
        <label>Connection Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DG__c</fullName>
        <label>DG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Incremental__c</fullName>
        <label>High Incremental</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Total__c</fullName>
        <label>High Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IG__c</fullName>
        <label>IG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_Calc_Lookup_Code__c</fullName>
        <label>Incremental Calc Lookup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium_Incremental__c</fullName>
        <label>Medium Incremental</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_Total__c</fullName>
        <label>Medium Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Supplier__c</fullName>
        <label>New Supplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overview_Lookup_Code__c</fullName>
        <label>Overview Lookup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Risk__c</fullName>
        <label>Product Risk</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CCP Pricing Price Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CCP Pricing Price Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCP Pricing Price Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>